Opened 17 years ago

Closed 16 years ago

#1849 closed bug (fixed)

[app_server] font corruption on window resize

Reported by: diver Owned by: stippi
Priority: normal Milestone: R1
Component: Servers/app_server Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Font corruption with last item in folder on tracker's window resize. To reproduce:

  • open any folder with at least 10 files (the more is better).
  • resize this folder to a half size
  • scroll down to the last file
  • now start to resize down this folder to make upper elements appear.

I will attach screenshot if needed. Tested under vmware with hrev24086

Attachments (1)

tracker_redraw_problem_2.jpg (30.8 KB ) - added by Adek336 16 years ago.
borrowed from #2975

Download all attachments as: .zip

Change History (7)

comment:1 by diver, 16 years ago

This seems to be a dup of #1816.

comment:2 by aldeck, 16 years ago

After working on #1816, i can now say this not a dup :)

Can still reproduce with hrev28402.

Might also be a bug in Tracker, i'll have a look.

comment:3 by aldeck, 16 years ago

I noticed it also happens (less often) when not autoscrolling (no need to scroll to the bottom (or right)).

Simply resizing (quickly might help) shows the problem.

Will attach a screenshot to document the ticket.

could be the same as #3037

comment:4 by Adek336, 16 years ago

http://dev.haiku-os.org/attachment/ticket/2975/tracker_redraw_problem_2.jpg
To reproduce, open a folder under the Haiku generated files, say, generated/.../add-ons/kernel/network/stack, delete one of the files, sort by newest on top, make the window small like showing two files only so that the vertical scrollbar appears, scroll to somewhere near the bottom, in the background do jam -q in src/add-ons/kernel/network/stack directory, click on the vertical scrollbar in Tracker window, start moving it slowly a little up and down. While the folder contents are updated, problem is reproduced.
checked on hrev28884

by Adek336, 16 years ago

borrowed from #2975

comment:5 by stippi, 16 years ago

Owner: changed from axeld to stippi
Status: newassigned

#3037 is unrelated. This problem is not fixed hrev30033.

comment:6 by stippi, 16 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev30068.

Note: See TracTickets for help on using tickets.