* Some cleanup in the commented out debug code. * Fixed a problem when scrolling. Basically, the region that could be copied   should be removed from the pending dirty region. Before a region is copied,   the dirty regions are removed from it. So the region at the target offset   can always be considered clean. This fixes the problem in Tracker when   enlarging windows that are already scrolled to the right or bottom. This then   triggers the Tracker window to scroll the pose view in such a way that the   bottom/right stays fixed, but would trigger this exact situation: The bottom   is already pending dirty, but then the clean contents are copied on top of it. Fixes ticket #1849 and perhaps also #2975.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30068 a95241bf-73f2-0310-859d-f6bbb57e9c96